[gd_scene load_steps=61 format=2]

[ext_resource path="res://Scenes/CameraSetup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sound/slidewhistle_rise.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sound/bite.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sound/slidewhistle_fall.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sound/Music/moonglow_cab_calloway.mp3" type="AudioStream" id=5]
[ext_resource path="res://Start.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Background/start_room_background.png" type="Texture" id=205]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=206]
[ext_resource path="res://Animations/LogoAnimated/logo_animated0000.png" type="Texture" id=207]
[ext_resource path="res://Animations/LogoAnimated/logo_animated0002.png" type="Texture" id=208]
[ext_resource path="res://Animations/LogoAnimated/logo_animated0001.png" type="Texture" id=209]
[ext_resource path="res://Animations/Hole/HoleIdle/hole_idle0002.png" type="Texture" id=210]
[ext_resource path="res://Animations/Hole/HoleIdle/hole_idle0001.png" type="Texture" id=211]
[ext_resource path="res://Animations/Hole/HoleIdle/hole_idle0000.png" type="Texture" id=212]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0024.png" type="Texture" id=213]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0026.png" type="Texture" id=214]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0025.png" type="Texture" id=215]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0027.png" type="Texture" id=216]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0007.png" type="Texture" id=217]
[ext_resource path="res://Animations/Hole/HoleClose/hole_close0013.png" type="Texture" id=218]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0008.png" type="Texture" id=219]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0006.png" type="Texture" id=220]
[ext_resource path="res://Animations/Hole/HoleClose/hole_close0010.png" type="Texture" id=221]
[ext_resource path="res://Animations/Hole/HoleClose/hole_close0011.png" type="Texture" id=222]
[ext_resource path="res://Animations/Hole/HoleClose/hole_close0014.png" type="Texture" id=223]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0018.png" type="Texture" id=224]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0019.png" type="Texture" id=225]
[ext_resource path="res://Animations/Hole/HoleClose/hole_close0012.png" type="Texture" id=226]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0020.png" type="Texture" id=227]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0021.png" type="Texture" id=228]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0022.png" type="Texture" id=229]
[ext_resource path="res://Animations/Hole/HoleDisappear/hole_disappear0023.png" type="Texture" id=230]
[ext_resource path="res://Hole.gd" type="Script" id=231]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0010.png" type="Texture" id=232]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0005.png" type="Texture" id=233]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0011.png" type="Texture" id=234]
[ext_resource path="res://Animations/Hole/HoleOpen/hole_open0009.png" type="Texture" id=235]
[ext_resource path="res://Animations/GuidesAnimated/guides0003.png" type="Texture" id=237]
[ext_resource path="res://Animations/GuidesAnimated/guides0006.png" type="Texture" id=238]
[ext_resource path="res://Animations/GuidesAnimated/guides0007.png" type="Texture" id=239]
[ext_resource path="res://Animations/GuidesAnimated/guides0010.png" type="Texture" id=240]
[ext_resource path="res://Animations/GuidesAnimated/guides0000.png" type="Texture" id=241]
[ext_resource path="res://Animations/GuidesAnimated/guides0002.png" type="Texture" id=242]
[ext_resource path="res://Animations/GuidesAnimated/guides0005.png" type="Texture" id=243]
[ext_resource path="res://Animations/GuidesAnimated/guides0012.png" type="Texture" id=244]
[ext_resource path="res://Animations/GuidesAnimated/guides0011.png" type="Texture" id=245]
[ext_resource path="res://Animations/GuidesAnimated/guides0001.png" type="Texture" id=246]
[ext_resource path="res://Animations/GuidesAnimated/guides0009.png" type="Texture" id=247]
[ext_resource path="res://Animations/GuidesAnimated/guides0008.png" type="Texture" id=248]
[ext_resource path="res://Animations/GuidesAnimated/guides0004.png" type="Texture" id=249]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29, 555.5 )

[sub_resource type="PhysicsMaterial" id=14]
bounce = 0.97

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1148.5, 54 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 207 ), ExtResource( 209 ), ExtResource( 208 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 221 ), ExtResource( 222 ), ExtResource( 226 ), ExtResource( 218 ), ExtResource( 223 ) ],
"loop": false,
"name": "Close",
"speed": 24.0
}, {
"frames": [ ExtResource( 212 ), ExtResource( 211 ), ExtResource( 210 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 224 ), ExtResource( 225 ), ExtResource( 227 ), ExtResource( 228 ), ExtResource( 229 ), ExtResource( 230 ), ExtResource( 213 ), ExtResource( 215 ), ExtResource( 214 ), ExtResource( 216 ) ],
"loop": false,
"name": "Disappear",
"speed": 24.0
}, {
"frames": [ ExtResource( 233 ), ExtResource( 220 ), ExtResource( 217 ), ExtResource( 219 ), ExtResource( 235 ), ExtResource( 232 ), ExtResource( 234 ) ],
"loop": false,
"name": "Open",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20.5, 21 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 241 ), ExtResource( 246 ), ExtResource( 242 ), ExtResource( 237 ), ExtResource( 249 ), ExtResource( 243 ), ExtResource( 238 ), ExtResource( 239 ), ExtResource( 248 ), ExtResource( 247 ), ExtResource( 240 ), ExtResource( 245 ), ExtResource( 244 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="PhysicsMaterial" id=12]
bounce = 0.99

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 1148.5, 54 )

[node name="Start" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" parent="." instance=ExtResource( 1 )]

[node name="StartRoomBackground" type="Sprite" parent="."]
z_index = -100
texture = ExtResource( 205 )

[node name="Wall" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 908, -43 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2( -898, -21 )
shape = SubResource( 5 )

[node name="Floor" type="StaticBody2D" parent="." groups=["floor"]]
position = Vector2( -45, 20 )
collision_mask = 3
physics_material_override = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 130, 510 )
shape = SubResource( 6 )

[node name="Logo" type="AnimatedSprite" parent="."]
z_index = -30
frames = SubResource( 7 )
frame = 1
playing = true

[node name="HoleR" type="AnimatedSprite" parent="."]
position = Vector2( 0, -33 )
scale = Vector2( 1.07, 1.07 )
z_index = -5
frames = SubResource( 8 )
animation = "Idle"
frame = 1
playing = true
script = ExtResource( 231 )

[node name="Area2D" type="Area2D" parent="HoleR"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleR/Area2D"]
position = Vector2( -417.5, 461 )
shape = SubResource( 9 )

[node name="SoundRise" type="AudioStreamPlayer2D" parent="HoleR"]
stream = ExtResource( 2 )

[node name="SoundFall" type="AudioStreamPlayer2D" parent="HoleR"]
stream = ExtResource( 4 )

[node name="SoundBite" type="AudioStreamPlayer2D" parent="HoleR"]
stream = ExtResource( 3 )
volume_db = 10.0
pitch_scale = 0.9

[node name="HoleL" type="AnimatedSprite" parent="."]
position = Vector2( 0, -33 )
scale = Vector2( 1.07, 1.07 )
z_index = -5
frames = SubResource( 8 )
animation = "Idle"
frame = 1
playing = true
flip_h = true
script = ExtResource( 231 )
target_scene = "res://Main.tscn"

[node name="Area2D" type="Area2D" parent="HoleL"]
position = Vector2( 834.579, 7.47663 )
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleL/Area2D"]
position = Vector2( -417.5, 461 )
shape = SubResource( 9 )

[node name="SoundRise" type="AudioStreamPlayer2D" parent="HoleL"]
stream = ExtResource( 2 )

[node name="SoundBite" type="AudioStreamPlayer2D" parent="HoleL"]
stream = ExtResource( 3 )
volume_db = 10.0
pitch_scale = 0.9

[node name="SoundFall" type="AudioStreamPlayer2D" parent="HoleL"]
stream = ExtResource( 4 )

[node name="PlayerBody" parent="." instance=ExtResource( 206 )]
position = Vector2( -545, 425 )
scale = Vector2( 0.507, 0.507 )
collision_mask = 1

[node name="PlayerBody2" parent="." instance=ExtResource( 7 )]

[node name="GuideNumbers" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.427451 )
frames = SubResource( 11 )
frame = 8
playing = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2( -45, 20 )
collision_mask = 3
physics_material_override = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( 124, -650 )
shape = SubResource( 13 )

[connection signal="do_camera_wipe" from="HoleR" to="Camera2D" method="_on_HoleR_do_camera_wipe"]
[connection signal="do_camera_wipe" from="HoleL" to="Camera2D" method="_on_HoleL_do_camera_wipe"]
